# piduier

./: .clang-format  .gitignore  CMakeLists.txt  Config.h.in  README.md  build.sh  deploy.sh  git-version.sh  index.html  main.c
.cursor/: hooks.json
.cursor/rules/: behavioral-guidelines.mdc  c-coding-style.mdc  c-cpp-coding-style.mdc  c-cpp-style-rule.mdc  git-workflaw.mdc  shell-script-style.mdc
.cursor/skills/bash-scripting/: SKILL.md
.cursor/skills/bash-scripting/references/: bash-script-style-guide.md
.cursor/skills/git-commit/: SKILL.md
.cursor/skills/writing-linux-c-app/: SKILL.md
.cursor/skills/writing-linux-c-app/references/: complex-app.md  small-app.md
.cursor/skills/writing-linux-c-app/references/complex-app/: Config.h.in  deploy.sh
.cursor/skills/writing-linux-c-app/references/complex-app/cmake/: thirdparty.cmake
.cursor/skills/writing-linux-c-app/references/complex-app/configs/: zlog.release.ini
.cursor/skills/writing-linux-c-app/references/complex-app/src/: main.c
.cursor/skills/writing-linux-c-app/references/complex-app/src/app/: app.h
.cursor/skills/writing-linux-c-app/references/complex-app/src/log/: log.c
.cursor/skills/writing-linux-c-app/references/small-app/: README.md
.cursor/skills/writing-linux-c-complex-app/: SKILL.md
.cursor/skills/writing-linux-c-complex-app/complex-app/: .gitignore  CMakeLists.txt  README.md  build.sh  git-version.sh
.cursor/skills/writing-linux-c-complex-app/complex-app/configs/: app.debug.json  app.release.json  zlog.debug.ini
.cursor/skills/writing-linux-c-complex-app/complex-app/src/app/: app.c
.cursor/skills/writing-linux-c-complex-app/complex-app/src/config/: config.c  config.h
.cursor/skills/writing-linux-c-complex-app/complex-app/src/log/: log.h
.cursor/skills/writing-linux-c-small-app/: SKILL.md
.cursor/skills/writing-linux-c-small-app/small-app/: CMakeLists.txt
.cursor/skills/writing-linux-c-small-app/small-app/inc/: log.h
.cursor/skills/writing-linux-c-small-app/small-app/src/: main.c
.github/workflows/: release-arm64-on-tag.yml
cmake/: thirdparty.cmake  toolchain-aarch64.cmake  toolchain-x86_64.cmake
config/: install.sh  piduier.service  piduier_debug.json  piduier_release.json  uninstall.sh
config/zlog/: zlog_debug.conf  zlog_release.conf
docs/: BUILD_AND_DEPLOY.md  CPU_USAGE_IMPLEMENTATION.md  FILE_STRUCTURE.md  FRONTEND_STRUCTURE.md  GPIO_IMPLEMENTATION.md  HOSTNAMECTL_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  NETWORKMANAGER_IMPLEMENTATION.md  PERMISSIONS_IMPLEMENTATION.md  PRODUCT_DESIGN_PROPOSAL.md  PWM_IMPLEMENTATION.md  TECHNICAL_IMPLEMENTATION_PLAN.md  TEMPERATURE_AND_STORAGE_IMPLEMENTATION.md  TEST_GUIDE.md  TIMEDATECTL_IMPLEMENTATION.md  WEBSOCKET_IMPLEMENTATION.md
docs/rpi5/: pinctrl.md  pwm.md
docs/superpowers/plans/: 2026-03-24-github-action-arm64-release-plan.md  2026-04-25-pwm-control.md
docs/superpowers/specs/: 2026-03-24-github-action-release-arm64-design.md  2026-04-25-pwm-control-design.md
scripts/tests/: pwm-api-smoke.sh
src/: main.c
src/config/: app_config.c  app_config.h
src/hardware/: gpio.c  gpio.h  pwm.c  pwm.h
src/http/: mongoose_log.c  router.c  router.h
src/network/: ethernet.c  ethernet.h  network_manager.c  network_manager.h  wifi.c  wifi.h
src/system/: cpu.c  cpu.h  datetime.c  datetime.h  memory.c  memory.h  storage.c  storage.h  system_info.c  system_info.h  temperature.c  temperature.h  uptime.c  uptime.h
src/util/: log.c  log.h
web/: index.html
web/css/: style.css
web/js/: app.js
